name:                ApiAI
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ChavXO/ApiAI-Haskell
license:             BSD3
license-file:        LICENSE
author:              Michael Chavinda
maintainer:          mschavinda@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ApiAI
  other-modules:       ApiAI.Command, 
                       ApiAI.Entity
                        ApiAI.Entry,
                        ApiAI.Request,
                        ApiAI.Resampler,
                        ApiAI.Response,
                        ApiAI.TextRequest,
                        ApiAI.VAD,
                        ApiAI.VoiceRequest
  build-depends:       base >= 4.7 && < 5,
                       http-client,
                       aeson,
                       scientific,
                       unordered-containers,
                       bytestring,
                       containers,
                       wreq,
                       lens,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite ApiAI-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ApiAI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChavXO/ApiAI-Haskell
